--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="flex flex-col w-full p-2 mx-auto transition duration-500 ease-in-out transform bg-white">
             
-              <p class="text-xs font-light text-center">Create with ❤️ by Nizar</p>
+              <p class="text-xs font-light text-center">Create with ❤️ by zxagung</p>
             </div>
           </div>
         </div>
@@ -65,7 +65,7 @@
                     Start
                   </button>
                   <hr />
-                  <p class="text-xs font-light text-center">Create with ❤️ by Nizar</p>
+                  <p class="text-xs font-light text-center">Create with ❤️ by zxagung</p>
                 </div>
               </div>
             </div>
